<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SailSpots</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_title">SailSpots</string>
    <string name="title_register">Register</string>
    <string name="register_title">Create your account</string>
    <string name="register_subtitle">Sign up to get started</string>
    <string name="login_tagline">Discover sailing spots worldwide</string>
    <string name="login_email_hint">Email or Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_primary_action">Log In</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_google_action">Sign in with Google</string>
    <string name="login_signup_prompt">Don\'t have an account?</string>
    <string name="login_signup_action">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_full_name">Full name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_create_account">Create account</string>
    <string name="action_back_to_login">Back to login</string>
    <string name="spot_image">Spot image</string>
    <string name="mark_favorite">Mark as favorite</string>
    <string name="show_details">Show details</string>
    <string name="title_maps">Map</string>
    <string name="title_favorites">Favorites</string>
</resources>